--- a/cfgs/pretrain_ampt_data_2D.yaml
+++ b/cfgs/pretrain_ampt_data_2D.yaml
@@ -1,35 +1,36 @@
 optimizer : {
   type: AdamW,
   kwargs: {
-  lr : 0.0005, 
+  lr : 0.001, 
   weight_decay : 0.05
 }}
 
 scheduler: {
   type: CosLR,
   kwargs: {
-    epochs: 300,
-    initial_epochs : 3
+    epochs: 400,
+    initial_epochs : 0
 }}
 
 dataset : {
-  train : { _base_: cfgs/dataset_configs/ShapeNet-55.yaml, 
+  train : { _base_: cfgs/dataset_configs/ampt_data_total_3D.yaml, 
             others: {subset: 'train', npoints: 128, whole: True}},
-  val : { _base_: cfgs/dataset_configs/ModelNet40.yaml, 
+  val : { _base_: cfgs/dataset_configs/ampt_data_total_2D.yaml, 
             others: {subset: 'test'}},
-  extra_train : { _base_: cfgs/dataset_configs/ModelNet40.yaml, 
-            others: {subset: 'train'}}}
+  extra_train : { _base_: cfgs/dataset_configs/ampt_data_total_2D.yaml, 
+            others: {subset: 'train'}}
+  }          
 model : {
   NAME: MaskPoint,
   m: 0.999,
   T: 0.07,
   K: 16384,
-  pos_embed_hidden_dim: 128,
+  pos_embed_hidden_dim: 16,
 
   transformer_config: {
     mask_ratio: 0.25,
-    trans_dim: 384,
-    depth: 12,
+    trans_dim: 96,
+    depth: 6, #12
     dec_depth: 1,
     use_sigmoid: true,
     use_moco_loss: false,
@@ -39,20 +40,20 @@ model : {
     focal_loss_alpha: 0.25,
     focal_loss_gamma: 2,
     ambiguous_threshold: -1,
-    ambiguous_dynamic_threshold: 256,
+    ambiguous_dynamic_threshold: 64, #equal to dec_query_real_num
     dec_query_mode: points,     # [center, points]
     dec_query_real_num: 64,
     dec_query_fake_num: 64,
     drop_path_rate: 0.1,
-    cls_dim: 512,
+    cls_dim: 2,
     num_heads: 6,
-    group_size: 16, 
-    num_group: 32, 
-    encoder_dims: 256,
+    group_size: 2, 
+    num_group: 128, 
+    encoder_dims: 64,
   }
 }
 
 total_bs : 256
 step_per_update : 1
 grad_norm_clip : 10
-max_epoch : 300
+max_epoch : 400
